<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/acc_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"
        />

    <item
        app:showAsAction="never"
        android:id="@+id/menu_sortByMatchDateAsc"
        android:title="@string/menu_next_upcoming"
        android:checkable="true"
        >
    </item>

    <item
        app:showAsAction="never"
        android:id="@+id/menu_sortByMatchDateDesc"
        android:title="@string/menu_remote_matches_first"
        android:checkable="true"
        >
    </item>

    <item
        app:showAsAction="never"
        android:id="@+id/menu_noOrder"
        android:title="@string/menu_last_updated"
        android:checkable="true"
        >
    </item>

</menu>