<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegister">

    <include
        android:id="@+id/reg_toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/reg_registerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/act_register_title"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/reg_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_toolbar" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/act_register_name"
        app:layout_constraintBottom_toTopOf="@id/reg_surname"
        app:layout_constraintTop_toBottomOf="@id/reg_registerLabel"
        android:autofillHints="name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/act_register_surname"
        app:layout_constraintBottom_toTopOf="@id/dateLayout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/reg_name"
        android:autofillHints="surname"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/reg_email"
        app:layout_constraintTop_toBottomOf="@id/reg_surname"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:id="@+id/dateLayout"
        >

        <TextView
            android:id="@+id/reg_dateBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_register_date_birth"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="3dp" />

        <TextView
            android:id="@+id/reg_selectDate"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:text="@string/act_register_select_date"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/act_register_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/reg_emailConf"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/dateLayout"
        android:autofillHints="email" />

    <EditText
        android:id="@+id/reg_emailConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/act_register_confirm_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/reg_pass"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/reg_email"
        android:autofillHints="email" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/act_register_pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/reg_passConf"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/reg_emailConf"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/reg_passConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/act_register_confirm_pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/reg_pass"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/reg_registerBtn"
        android:autofillHints="password" />

    <Button
        android:id="@+id/reg_registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_login_reg_button"
        app:layout_constraintBottom_toTopOf="@id/reg_progressBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_passConf" />

    <ProgressBar
        android:id="@+id/reg_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_registerBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>