<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <include
        android:id="@+id/log_toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/log_loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/act_login_title"
        android:padding="3dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_toolbar"
        app:layout_constraintBottom_toTopOf="@id/log_email"/>

    <EditText
        android:id="@+id/log_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="email"
        android:hint="@string/act_login_email"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_loginLabel"
        app:layout_constraintBottom_toTopOf="@id/log_pass"/>

    <EditText
        android:id="@+id/log_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/act_login_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_email"
        app:layout_constraintBottom_toTopOf="@id/log_loginBtn"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/log_loginBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/act_login_log_button"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_pass"
        app:layout_constraintBottom_toTopOf="@id/log_forgottenPsw"/>

    <TextView
        android:id="@+id/log_forgottenPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_login_log_forgottenPass"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="15sp"
        app:layout_constraintBottom_toTopOf="@id/log_progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_loginBtn" />

    <ProgressBar
        android:id="@+id/log_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_forgottenPsw" />

    <TextView
        android:id="@+id/log_registerQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_login_label1"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/log_registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/log_registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_login_reg_button"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/log_otherLoginTypeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/log_otherLoginTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_login_label2"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/log_googleSignInBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/log_googleSignInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>